--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About Me:Arthi Venkatesan</title>
+  </head>
+  <hr>
+  <body>
+    <h1>Biography</h1>
+      <p>Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior in highschool and I'm excited to be an upperclassman this fall.</p>
+  <br>
+    <h2>Likes:</h2>
+      <ul>
+        <li>Art</li>
+        <li>Dance</li>
+        <li>Watching Netflix</li>
+      </ul>
+    
