--- a/aboutme.html
+++ b/aboutme.html
@@ -4,13 +4,13 @@
     <title>About Me:Arthi Venkatesan</title>
     
   </head>
-  <hr>
   <body>
-    <h1>Biography</h1>
+    <h1>Arthi Venkatesan</h1>
+  <hr>
+    <h2>Biography</h2>
     <p>Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior in highschool and I'm excited to be an upperclassman this fall.</p>
   <br>
-  <br>
-    <h2>Likes:</h2>
+    <h3>Likes:</h3>
       <ul>
         <li>Art</li>
         <li>Dance</li>
