--- a/aboutme.html
+++ b/aboutme.html
@@ -1,21 +1,123 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <title>About Me:Arthi Venkatesan</title>
-    
+  	<title>About Me:Arthi Venkatesan</title>   
   </head>
-  <body>
-    <h1>Arthi Venkatesan</h1>
-  <hr>
-    <h2>Biography</h2>
-    <p>Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior in highschool and I'm excited to be an upperclassman this fall.</p>
-  <br>
-    <h3>Likes:</h3>
-      <ul>
-        <li>Art</li>
-        <li>Dance</li>
-        <li>Watching Netflix</li>
-      </ul>
-  </body>
+
+  <body style="background-color:darkseagreen;”>
+
+  <div class="section">
+
+    <h1 style="text-align:center">About Me: Arthi Venkatesan</h1>
+
+<hr>
+
+     <img src="FullSizeRender.jpg" ALIGN="left" width="550" height="475"> 
+
+    <h2 style="text-align:center">Biography</h2>
+    	<p style="text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</p>
+
+   <table>
+  <tr>
+    <th>Likes</th>
+    <th>Dislikes</th>
+  </tr>
+  <tr>
+    <td>Art</td>
+    <td>Ranch</td>
+  </tr>
+  <tr>
+    <td>Dance</td>
+    <td>Spiders</td> 
+  </tr>
+  <tr>
+    <td>Watching Netflix</td>
+    <td>Snakes</td>
+  </tr>
+</table>
+
+    <h2 style="text-align:center">FuN fAcT</h2>
+    	<p style="text-align:center">My BeDrOoM iS gReEn!</p>
+<br>
+
+    <h2 style="text-align:center">Favorite Webpages</h2>
+    	<center> <a href="https://www.google.com/">Google is legit</a> <center> 
+    	<center> <a href="https://www.facebook.com/">Facebook is fun</a> <center> 
+    	<center> <a href="https://www.instagram.com/?hl=en">I like Instas that are aesthetic</a> <center> 
+
+    <h2 style="text-align:center">My Scratch Paddle Ball Game!</h2>
+    	<p style="text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</p>
+    	<center> <a href="https://scratch.mit.edu/projects/166857478/">Paddle Ball!!!</a> <center> 
+   	 <center> <img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-06-27 at 8.52.14 AM.png" width="350" height="300"> <center>
+
+<br>
+
+    <h2 style="text-align:center">My Tessellation Designs-Python Coding!</h2>
+
+<center> <img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-06-28 at 10.40.29 AM.png" width="350" height="350"> <center> 
+
+  <table>
+  <tr>
+
+    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-06-28 at 10.07.44 AM.png" width="150" height="150"></th>
+
+    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-10 at 2.50.02 PM.png" width="150" height="150"></th> 
+
+    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-10 at 2.51.13 PM.png" width="150" height="150"></th>
+
+    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-10 at 2.53.54 PM.png" width="150" height="150"></th> 
+
+    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-10 at 2.57.40 PM.png" width="150" height="150"></th>
+  </tr>
+  </table>
+
+<br>
+
+   <h2 style="text-align:center">Obamicon-Python Coding!</h2>
+
+  <table>
+  <tr>
+
+     <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-06 at 9.25.13 AM.png" width="350" height="450"></th>
+
+     <th><img src="/Users/arthivenkatesan/Desktop/sprouseimage.jpg" width="350" height="450"></th>
+
+     <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-05 at 3.56.47 PM.png" width="350" height="450"></th>
+
+  </tr>
+  </table>
+
+   <h2 style="text-align:center">LED Light Show-Arduino Coding!</h2>
+
+   <table>
+   <tr>
+
+      <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-06 at 3.48.41 PM.png" width="350" height="450"></th>
+
+      <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-06 at 3.49.30 PM.png" width="350" height="450"><th>
+
+   </tr>
+   </table>
+
+   <table>
+   <tr>
+
+      <th><img src="/Users/arthivenkatesan/Desktop/IMG_1574.JPG" width="350" height="450"></th>
+
+      <th><img src="/Users/arthivenkatesan/Desktop/IMG_1594.JPG" width="350" height="450"></th>
+ 
+      <th><img src="/Users/arthivenkatesan/Desktop/IMG_1593.JPG" width="350" height="450"></th>
+
+   </tr>
+   </table>
+  
+
+	 <h2 style="text-align:center">Escape Bot-Arduino Coding!</h2
+
+
+   </body>
+
 </html>
+
     
