--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 
 <hr>
 
-    <img src="FullSizeRender.jpg" ALIGN="left" width="550" height="475"> 
+    <img src="http://i66.tinypic.com/osh6s8.jpg" ALIGN="left" width="550" height="475"> 
 
     <h2 style="text-align:center">Biography</h2>
     	<p style="text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</p>
@@ -52,25 +52,25 @@
     <h2 style="text-align:center">My Scratch Paddle Ball Game!</h2>
     	<p style="text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</p>
     	<center> <a href="https://scratch.mit.edu/projects/166857478/">Paddle Ball!!!</a> <center> 
-   	 <center> <img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-06-27 at 8.52.14 AM.png" width="350" height="300"> <center>
+   	 <center> <img src="http://i63.tinypic.com/2r2b3pl.png" width="350" height="300"> <center>
 
 <br>
 
     <h2 style="text-align:center">My Tessellation Designs-Python Coding!</h2>
 
-<center> <img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-06-28 at 10.40.29 AM.png" width="350" height="350"> <center> 
+<center> <img src="http://i66.tinypic.com/294tqix.png" width="350" height="350"> <center> 
 
   <table>
   <tr>
-    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-06-28 at 10.07.44 AM.png" width="150" height="150"></th>
+    <th><img src="http://i64.tinypic.com/25jbig4.png" width="150" height="150"></th>
 
-    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-10 at 2.50.02 PM.png" width="150" height="150"></th> 
+    <th><img src="http://i67.tinypic.com/rkakgi.png" width="150" height="150"></th> 
 
-    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-10 at 2.51.13 PM.png" width="150" height="150"></th>
+    <th><img src="http://i66.tinypic.com/4ztf1w.png" width="150" height="150"></th>
 
-    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-10 at 2.53.54 PM.png" width="150" height="150"></th> 
+    <th><img src="http://i66.tinypic.com/4rf950.png" width="150" height="150"></th> 
 
-    <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-10 at 2.57.40 PM.png" width="150" height="150"></th>
+    <th><img src="http://i65.tinypic.com/x3aezd.png" width="150" height="150"></th>
   </tr>
   </table>
 
