--- a/aboutme.html
+++ b/aboutme.html
@@ -80,11 +80,11 @@
 
   <table>
   <tr>
-     <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-06 at 9.25.13 AM.png" width="350" height="450"></th>
+     <th><img src="http://i65.tinypic.com/a1lro8.png" width="350" height="450"></th>
 
-     <th><img src="/Users/arthivenkatesan/Desktop/sprouseimage.jpg" width="350" height="450"></th>
+     <th><img src="http://i64.tinypic.com/2rzatzd.jpg" width="350" height="450"></th>
 
-     <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-05 at 3.56.47 PM.png" width="350" height="450"></th>
+     <th><img src="http://i68.tinypic.com/531tvl.jpg" width="350" height="450"></th>
   </tr>
   </table>
 
@@ -92,19 +92,18 @@
 
    <table>
    <tr>
-      <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-06 at 3.48.41 PM.png" width="350" height="450"></th>
+      <th><img src="http://i68.tinypic.com/kbukwo.jpg" width="350" height="450"></th>
 
-      <th><img src="/Users/arthivenkatesan/Desktop/Screen Shot 2017-07-06 at 3.49.30 PM.png" width="350" height="450"><th>
+      <th><img src="http://i68.tinypic.com/sfgm5h.png" width="350" height="450"><th>
    </tr>
    </table>
 
    <table>
    <tr>
-      <th><img src="/Users/arthivenkatesan/Desktop/IMG_1574.JPG" width="350" height="450"></th>
+      <th><img src="http://i68.tinypic.com/r00ztv.jpg" width="350" height="450"></th>
 
-      <th><img src="/Users/arthivenkatesan/Desktop/IMG_1594.JPG" width="350" height="450"></th>
+      <th><img src="http://i68.tinypic.com/2i9sdpe.jpg" width="350" height="450"></th>
  
-      <th><img src="/Users/arthivenkatesan/Desktop/IMG_1593.JPG" width="350" height="450"></th>
    </tr>
    </table>
   
