--- a/aboutme.html
+++ b/aboutme.html
@@ -18,6 +18,7 @@
     <h2 style="text-align:center">Biography</h2>
     	<p style="text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</p>
 
+<center>				    
   <table>
   <tr>
     <th>Likes</th>
@@ -36,6 +37,7 @@
     <td>Snakes</td>
   </tr>
   </table>
+</center>				    
 				    
 <br>				    
     <h2 style="text-align:center">FuN fAcT</h2>
