--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,8 @@
 <html>
 
   <head>
+<link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Meddon" rel="stylesheet">
   	<title>About Me:Arthi Venkatesan</title>   
   </head>
 
@@ -9,7 +11,7 @@
 
   <div class="section">
 
-    <h1 style="text-align:center">About Me: Arthi Venkatesan</h1>
+    <h1 style="font-family: 'Meddon', cursive;text-align:center">About Me: Arthi Venkatesan</h1>
 
 <hr>
 
