--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 
   <head>
 <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Meddon" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
   	<title>About Me:Arthi Venkatesan</title>   
   </head>
 
@@ -11,7 +11,7 @@
 
   <div class="section">
 
-    <h1 style="font-family: 'Meddon', cursive;text-align:center">About Me: Arthi Venkatesan</h1>
+    <h1 style="font-family: 'Bungee Outline', cursive;text-align:center">About Me: Arthi Venkatesan</h1>
 
 <hr>
 
