--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 
   <head>
 <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   	<title>About Me:Arthi Venkatesan</title>   
   </head>
 
@@ -13,9 +13,9 @@
 <hr>
     <img src="http://i66.tinypic.com/osh6s8.jpg" ALIGN="left" width="550" height="475"> 
     <h2 style="font-family: 'Megrim', cursive;text-align:center">Biography</h2>
-    	<p style="text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</p>
+    	<p style="font-family: 'Raleway', sans-serif;text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</p>
 <center>				    
-  <table>
+  <table style="font-family: 'Raleway', sans-serif;text-align:center">
   <tr>
     <th>Likes</th>
     <th>Dislikes</th>
@@ -37,16 +37,15 @@
 				    
 <br>				    
     <h2 style="font-family: 'Megrim', cursive;text-align:center">FuN fAcT</h2>
-    	<p style="text-align:center">My BeDrOoM iS gReEn!</p>
+    	<p style="font-family: 'Raleway', sans-serif;text-align:center">My BeDrOoM iS gReEn!</p>
 <br>
     <h2 style="font-family: 'Megrim', cursive;text-align:center">Favorite Webpages</h2>
     	<center> <a href="https://www.google.com/">Google is legit</a> <center> 
     	<center> <a href="https://www.facebook.com/">Facebook is fun</a> <center> 
     	<center> <a href="https://www.instagram.com/?hl=en">I like Instas that are aesthetic</a> <center> 
 							   
-<br>
     <h2 style="font-family: 'Megrim', cursive;text-align:center">My Scratch Paddle Ball Game!</h2>
-    	<p style="text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</p>
+    	<p style="font-family: 'Raleway', sans-serif;text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</p>
     	<center> <a href="https://scratch.mit.edu/projects/166857478/">Paddle Ball!!!</a> <center> 
    	 <center> <img src="http://i63.tinypic.com/2r2b3pl.png" width="350" height="300"> <center>
 <br>
