--- a/aboutme.html
+++ b/aboutme.html
@@ -12,8 +12,8 @@
     <h1 style="font-family: 'Megrim', cursive;text-align:center">About Me: Arthi Venkatesan</h1>
 <hr>
     <img src="http://i66.tinypic.com/osh6s8.jpg" ALIGN="left" width="550" height="475"> 
-    <h2 style="font-family: 'Megrim', cursive;text-align:center">Biography</h2>
-    	<p style="font-family: 'Raleway', sans-serif;text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</p>
+    <h1 style="font-family: 'Megrim', cursive;text-align:center">Biography</h1>
+    	<h2 style="font-family: 'Raleway', sans-serif;text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</h2>
 <center>				    
   <table style="font-family: 'Raleway', sans-serif;text-align:center">
   <tr>
@@ -36,20 +36,20 @@
 </center>				    
 				    
 <br>				    
-    <h2 style="font-family: 'Megrim', cursive;text-align:center">FuN fAcT</h2>
-    	<p style="font-family: 'Raleway', sans-serif;text-align:center">My BeDrOoM iS gReEn!</p>
+    <h1 style="font-family: 'Megrim', cursive;text-align:center">FuN fAcT</h1>
+    	<h2 style="font-family: 'Raleway', sans-serif;text-align:center">My BeDrOoM iS gReEn!</h2>
 <br>
-    <h2 style="font-family: 'Megrim', cursive;text-align:center">Favorite Webpages</h2>
+    <h1 style="font-family: 'Megrim', cursive;text-align:center">Favorite Webpages</h1>
     	<center> <a href="https://www.google.com/">Google is legit</a> <center> 
     	<center> <a href="https://www.facebook.com/">Facebook is fun</a> <center> 
     	<center> <a href="https://www.instagram.com/?hl=en">I like Instas that are aesthetic</a> <center> 
 							   
-    <h2 style="font-family: 'Megrim', cursive;text-align:center">My Scratch Paddle Ball Game!</h2>
-    	<p style="font-family: 'Raleway', sans-serif;text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</p>
+    <h1 style="font-family: 'Megrim', cursive;text-align:center">My Scratch Paddle Ball Game!</h1>
+    	<h2 style="font-family: 'Raleway', sans-serif;text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</h2>
     	<center> <a href="https://scratch.mit.edu/projects/166857478/">Paddle Ball!!!</a> <center> 
    	 <center> <img src="http://i63.tinypic.com/2r2b3pl.png" width="350" height="300"> <center>
 <br>
-    <h2 style="font-family: 'Megrim', cursive;text-align:center">My Tessellation Designs-Python Coding!</h2>
+    <h1 style="font-family: 'Megrim', cursive;text-align:center">My Tessellation Designs-Python Coding!</h1>
 <center> <img src="http://i66.tinypic.com/294tqix.png" width="350" height="350"> <center> 
   <table>
   <tr>
@@ -61,7 +61,7 @@
   </tr>
   </table>
 <br>
-   <h2 style="font-family: 'Megrim', cursive;text-align:center">Obamicon-Python Coding!</h2>
+   <h1 style="font-family: 'Megrim', cursive;text-align:center">Obamicon-Python Coding!</h1>
   <table>
   <tr>
      <th><img src="http://i65.tinypic.com/a1lro8.png" width="350" height="450"></th>
@@ -69,7 +69,7 @@
      <th><img src="http://i68.tinypic.com/531tvl.jpg" width="350" height="450"></th>
   </tr>
   </table>
-   <h2 style="font-family: 'Megrim', cursive;text-align:center">LED Light Show-Arduino Coding!</h2>
+   <h1 style="font-family: 'Megrim', cursive;text-align:center">LED Light Show-Arduino Coding!</h1>
    <table>
    <tr>
       <th><img src="http://i68.tinypic.com/kbukwo.jpg" width="350" height="450"></th>
@@ -84,6 +84,6 @@
    </tr>
    </table>
   
-	 <h2 style="font-family: 'Megrim', cursive;text-align:center">Escape Bot-Arduino Coding!</h2
+	 <h1 style="font-family: 'Megrim', cursive;text-align:center">Escape Bot-Arduino Coding!</h1>
    </body>
 </html>
