--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,20 @@
   <head>
 <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <style>
+	  
+  body {
+  font-family:'Megrim', cursive;
+  color: white;
+  background: url(sam-hum-90742.jpg) no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  }
+	  
+  </style>
+	  
   	<title>About Me:Arthi Venkatesan</title>   
   </head>
 
