--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
   </head>
 
   <div class="section">
-    <h1 style="font-family: 'Megrim', cursive;text-align:center">About Me: Arthi Venkatesan</h1>
+    <h1 style="font-family: 'Megrim', cursive;font-size: 150px; text-align:center">About Me: Arthi Venkatesan</h1>
 <hr>
     <img src="http://i66.tinypic.com/osh6s8.jpg" ALIGN="left" width="550" height="475"> 
     <h1 style="font-family: 'Megrim', cursive;text-align:center">Biography</h1>
