--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
   body {
   font-family:'Megrim', cursive;
   color: white;
-  background: url(https://raw.githubusercontent.com/artsyarthi/Portfolio/gh-pages/sam-hull-90742%20(1).jpg) no-repeat center center fixed;
+  background: url(sam-hull-90742.jpg) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
