--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,12 @@
   <head>
 <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	  
   <style>
 	  
   body {
   font-family:'Megrim', cursive;
-  color: white;
+  color: black;
   background: url(sam-hull-90742.jpg) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
@@ -18,11 +19,12 @@
 	  
   </style>
 	  
-  	<title>About Me:Arthi Venkatesan</title>   
+  	<title>About Me:Arthi Venkatesan</title> 
+	  
   </head>
 
   <div class="section">
-    <h1 style="font-family: 'Megrim', cursive;font-size: 150px; text-align:center">About Me: Arthi Venkatesan</h1>
+    <h1 style="font-family: 'Megrim', cursive;font-size: 150px; text-align:center"> Arthi Venkatesan</h1>
 <hr>
     <img src="http://i66.tinypic.com/osh6s8.jpg" ALIGN="left" width="550" height="475"> 
     <h1 style="font-family: 'Megrim', cursive;text-align:center">Biography</h1>
