--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 	  
   body {
   font-family:'Megrim', cursive;
-  color: black;
+  color: white;
   background: url(http://i65.tinypic.com/17d46w.jpg) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
@@ -25,7 +25,13 @@
 
   <div class="section">
     <h1 style="font-family: 'Megrim', cursive;font-size: 150px; text-align:center"> Arthi Venkatesan</h1>
-<hr>
+<br>	  
+<br>		  
+<br>		  
+<br>		  
+<br>	
+<br>	
+<br>		  
     <img src="http://i66.tinypic.com/osh6s8.jpg" ALIGN="left" width="550" height="475"> 
     <h1 style="font-family: 'Megrim', cursive;text-align:center">Biography</h1>
     	<h2 style="font-family: 'Raleway', sans-serif;text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</h2>
