--- a/aboutme.html
+++ b/aboutme.html
@@ -16,12 +16,51 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   }
+{margin:0;}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+    background-color: #B39FE1;
+    color: white;
+}
 	  
   </style>
 	  
   	<title>About Me:Arthi Venkatesan</title> 
 	  
   </head>
+	
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+<div style="padding-left:16px">
+  <h2>Top Navigation Example</h2>
+  <p>Some content..</p>
+</div>
+
 <br>	  
 <br>		  
 <br>		  
