--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
   body {
   font-family:'Megrim', cursive;
   color: white;
-  background: url(http://i65.tinypic.com/17d46w.jpg) no-repeat center center fixed;
+  background: url(http://i65.tinypic.com/10r46sx.jpg) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
