--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -10,7 +10,7 @@
   body {
   font-family:'Megrim', cursive;
   color: white;
-  background: url(http://i65.tinypic.com/10r46sx.jpg) no-repeat center center fixed;
+  background: url(http://i65.tinypic.com/17d46w.jpg) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -42,11 +42,14 @@
 	  
   	<title>Arthi Venkatesan</title> 
 	  
-  </head><h1 style="font-family: 'Megrim', cursive;text-align:center"> Girls Who Code-Summer Immersion Program</h1>						   
+  </head>
+	
+    <h1 style="font-family: 'Megrim', cursive;font-size: 100px;text-align:left"> Girls Who Code-Summer Immersion Program</h1>
+	
     <h2 style="font-family: 'Raleway', sans-serif;text-align:center">My Scratch Paddle Ball Game!</h2>
     	<p style="font-family: 'Raleway', sans-serif;text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</p>
     	<center> <a href="https://scratch.mit.edu/projects/166857478/">Paddle Ball!!!</a> <center> 
-   	 <center> <img src="http://i63.tinypic.com/2r2b3pl.png" width="350" height="300"> <center>
+   	<center> <img src="http://i63.tinypic.com/2r2b3pl.png" width="350" height="300"> <center>
 <br>
 											
     <h2 style="font-family: 'Raleway', sans-serif;text-align:center">My Tessellation Designs-Python Coding!</h2>
