--- a/aboutmepg1.html
+++ b/aboutmepg1.html
@@ -47,6 +47,13 @@
   	<title>Arthi Venkatesan</title> 
 	  
   </head>
+	
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About Me</a>
+  <a href="#contact">Contact</a>
+  <a href="#journey">My Journey</a>
+  </div>
   
   <h1 style="font-family: 'Megrim', cursive;font-size: 100px; text-align:left">About Me</h1>
 
