--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -44,6 +44,13 @@
 	  
   </head>
 	
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About Me</a>
+  <a href="#contact">Contact</a>
+  <a href="#journey">My Journey</a>
+  </div>	  	
+	
     <h1 style="font-family: 'Megrim', cursive;font-size: 100px;text-align:left"> Girls Who Code-Summer Immersion Program</h1>
 	
     <h2 style="font-family: 'Raleway', sans-serif;text-align:center">My Scratch Paddle Ball Game!</h2>
