--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -52,7 +52,11 @@
   <a href="#journey">My Journey</a>
   </div>	  	
 	
-    <h1 style="font-family: 'Megrim', cursive;font-size: 100px;text-align:left"> Girls Who Code-Summer Immersion Program</h1>
+    
+    
+    <h1 style="font-family: 'Megrim', cursive;font-size: 100px;text-align:left"> My Journey</h1>
+	
+    <h1 style="font-family: 'Megrim',text-align:center"> Girls Who Code-Summer Immersion Program</h1>
 	
 <hr>
 	
