--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -55,10 +55,10 @@
     
     
     <h1 style="font-family: 'Megrim', cursive;font-size: 100px;text-align:left"> My Journey</h1>
-	
-    <h1 style="font-family: 'Megrim',text-align:center"> Girls Who Code-Summer Immersion Program</h1>
-	
+
 <hr>
+	
+    <h1 style="font-family: 'Megrim', cursive;font-size: 50px;text-align:center"> Girls Who Code-Summer Immersion Program</h1>
 	
     <h2 style="font-family: 'Megrim', cursive;text-align:center">My Scratch Paddle Ball Game!</h2>
     	<p style="font-family: 'Raleway', sans-serif;text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</p>
