--- a/artworkpg2.html
+++ b/artworkpg2.html
@@ -47,10 +47,14 @@
   <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#about">About Me</a>
-  <a href="#contact">Contact</a>
+  <a href="#artwork">Artwork</a>
   <a href="#journey">My Journey</a>
   </div>
   
+	  
+    <h1 style="font-family: 'Megrim', cursive;font-size: 100px;text-align:left"> Artwork</h1>
+
+<hr>
  
  </body>
 									 
