--- a/arthivenkatesan.html
+++ b/arthivenkatesan.html
@@ -51,7 +51,7 @@
 <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#about">About Me</a>
-  <a href="#contact">Contact</a>
+  <a href="#artwork">Artwork</a>
   <a href="#journey">My Journey</a>
 </div>	  	
   <div class="section">
