--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -97,13 +97,10 @@
       <th><img src="http://i68.tinypic.com/sfgm5h.png" width="350" height="450"><th>
    </tr>
    </table>
-   <table>
-   <tr>
-      <th><img src="http://i68.tinypic.com/r00ztv.jpg" width="350" height="550"></th>
-      <th><img src="http://i68.tinypic.com/2i9sdpe.jpg" width="350" height="550"></th>
+   
+      <img src="http://i68.tinypic.com/r00ztv.jpg" width="350" height="550" ALIGN="left"></th>
+      <img src="http://i68.tinypic.com/2i9sdpe.jpg" width="350" height="550" ALIGN="right"></th>
  
-   </tr>
-   </table>
   
 	 <h2 style="font-family: 'Megrim', cursive;font-size: 30px;text-align:center">Escape Bot-Arduino Coding!</h2>
    
