--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -98,10 +98,14 @@
    </tr>
    </table>
    
-      <img src="http://i68.tinypic.com/r00ztv.jpg" width="150" height="250" ALIGN="left"></th>
-      <img src="http://i68.tinypic.com/2i9sdpe.jpg" width="150" height="250" ALIGN="right"></th>
- 
-  
+   <table>
+   <tr>
+      <th><img src="http://i67.tinypic.com/2h5thyc.jpg" width="150" height="250" ALIGN="left"></th>
+      <th><img src="http://i68.tinypic.com/5zgwsz.jpg" width="150" height="250" ALIGN="right"></th>
+   </tr>
+   </table>
+      
+      
 	 <h2 style="font-family: 'Megrim', cursive;font-size: 30px;text-align:center">Escape Bot-Arduino Coding!</h2>
    
    </body>
