--- a/arthivenkatesan.html
+++ b/arthivenkatesan.html
@@ -50,7 +50,7 @@
 	
 <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#about">About Me</a>
+  <a href="https://artsyarthi.github.io/Portfolio/aboutmepg1.html">About Me</a>
   <a href="#artwork">Artwork</a>
   <a href="#journey">My Journey</a>
 </div>	  	
