--- a/arthivenkatesan.html
+++ b/arthivenkatesan.html
@@ -49,10 +49,10 @@
   </head>
 	
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="https://artsyarthi.github.io/Portfolio/arthivenkatesan.html">Home</a>
   <a href="https://artsyarthi.github.io/Portfolio/aboutmepg1.html">About Me</a>
-  <a href="#artwork">Artwork</a>
-  <a href="#journey">My Journey</a>
+  <a href="https://artsyarthi.github.io/Portfolio/artworkpg2.html">Artwork</a>
+  <a href="https://artsyarthi.github.io/Portfolio/myjourneypg3.htm">My Journey</a>
 </div>	  	
   <div class="section">
 <br>		  
