--- a/artworkpg2.html
+++ b/artworkpg2.html
@@ -48,7 +48,7 @@
   <a class="active" href="https://artsyarthi.github.io/Portfolio/arthivenkatesan.html">Home</a>
   <a href="https://artsyarthi.github.io/Portfolio/aboutmepg1.html">About Me</a>
   <a href="https://artsyarthi.github.io/Portfolio/artworkpg2.html">Artwork</a>
-  <a href="https://artsyarthi.github.io/Portfolio/myjourneypg3.htm">My Journey</a>
+  <a href="https://artsyarthi.github.io/Portfolio/myjourneypg3.html">My Journey</a>
   </div>
   
 	  
