--- a/aboutmepg1.html
+++ b/aboutmepg1.html
@@ -49,8 +49,8 @@
   </head>
 	
   <div class="topnav">
-  <a class="active" href="https://artsyarthi.github.io/Portfolio/arthivenkatesan.html">Home</a>
-  <a href="https://artsyarthi.github.io/Portfolio/aboutmepg1.html">About Me</a>
+  <a href="https://artsyarthi.github.io/Portfolio/arthivenkatesan.html">Home</a>
+  <a class="active" href="https://artsyarthi.github.io/Portfolio/aboutmepg1.html">About Me</a>
   <a href="https://artsyarthi.github.io/Portfolio/artworkpg2.html">Artwork</a>
   <a href="https://artsyarthi.github.io/Portfolio/myjourneypg3.html">My Journey</a>
   </div>
