--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -58,7 +58,8 @@
 
 <hr>
 	
-    <h1 style="font-family: 'Megrim', cursive;font-size: 50px;text-align:center"> Girls Who Code-Summer Immersion Program</h1>
+    <img src="http://i63.tinypic.com/1zdc5ly.jpg" ALIGN="left" width="550" height="475"> 	
+    <h1 style="font-family: 'Megrim', cursive;font-size: 30px;text-align:center"> Girls Who Code-Summer Immersion Program</h1>
 	
     <h2 style="font-family: 'Megrim', cursive;font-size: 30px;text-align:center">My Scratch Paddle Ball Game!</h2>
     	<p style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">Player 1 uses right and left arrow keys to move, Player 2 uses s(left) and d(right) keys to move</p>
