--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -60,6 +60,7 @@
 	
     <img src="http://i63.tinypic.com/1zdc5ly.jpg" ALIGN="left" width="550" height="475"> 	
     <h1 style="font-family: 'Megrim', cursive;font-size: 40px;text-align:center"> Girls Who Code-Summer Immersion Program</h1>
+    <h2 style="font-family: 'Megrim', cursive;font-size: 20px;text-align:center"> June 19th,2017 - August 4th, 2017</h2>
 <br>
 <br>
 <br>
