--- a/aboutmepg1.html
+++ b/aboutmepg1.html
@@ -6,6 +6,12 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	  
   <style>
+
+  table, th, td {
+
+border: 1px solid white;
+
+}
 	  
   body {
   font-family:'Megrim', cursive;
@@ -64,10 +70,10 @@
     	<h2 style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</h2>
 
 <center>				    
-  <table style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">
+  <table style="width:50%;font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">
   <tr>
-    <th>Likes</th>
-    <th>Dislikes</th>
+    <th style="width:50%">Likes</th>
+    <th style="width:50%">Dislikes</th>
   </tr>
   <tr>
     <td>Art</td>
