--- a/aboutmepg1.html
+++ b/aboutmepg1.html
@@ -87,6 +87,15 @@ border: 1px solid white;
     <td>Watching Netflix</td>
     <td>Snakes</td>
   </tr>
+  </tr>
+  <tr>
+    <td>Organizing</td>
+    <td>Balloons Popping</td> 
+  </tr>
+  <tr>
+    <td>Golden Retrievers</td>
+    <td>Rap</td>
+  </tr>
   </table>
 </center>				    
 				    
@@ -95,8 +104,10 @@ border: 1px solid white;
 <br>
 <br>	
 
-    <h1 style="font-family: 'Megrim', cursive;font-size: 50px;text-align:center">FuN fAcT</h1>
-    	<h2 style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">My BeDrOoM iS gReEn!</h2>
+    <h1 style="font-family: 'Megrim', cursive;font-size: 50px;text-align:center">Fun Facts</h1>
+    	<h2 style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">My bedroom is painted green!</h2>
+	<h2 style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">I'm a dancer and artist!</h2>
+	<h2 style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">My favorite shows include Grey's Anatomy, The Flash, Riverdale, etc.</h2>
         
 <br>
 	
