--- a/aboutmepg1.html
+++ b/aboutmepg1.html
@@ -65,9 +65,9 @@ border: 1px solid white;
 	
 <hr>
 
-    <img src="http://i66.tinypic.com/osh6s8.jpg" ALIGN="left" width="550" height="475"> 
-    <h1 style="font-family: 'Megrim', cursive;font-size: 50px;text-align:center">Biography</h1>
-    	<h2 style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">Hey there! I have lived in the Bay Area for all my life. I'm going to be a junior  in highschool and I'm excited to be an upperclassman this fall.</h2>
+   <h1 style="font-family: 'Megrim', cursive;font-size: 50px;text-align:center">Biography</h1>
+   <img src="http://i66.tinypic.com/osh6s8.jpg" ALIGN="left" width="550" height="475"> 
+   <h2 style="font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">Hi there, let me tell you a little about me! I'm South Indian and I can read and speak Tamil fluently. I have lived in the Bay Area all my life. I love California because the weather is amazing (usually). Also, I'm going to be a junior in highschool this fall and I'm excited to have a fresh start! </h2>
 
 <center>				    
   <table style="width:50%;font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">
