--- a/aboutmepg1.html
+++ b/aboutmepg1.html
@@ -72,8 +72,8 @@ border: 1px solid white;
 <center>				    
   <table style="width:50%;font-family: 'Raleway', sans-serif;font-size: 30px;text-align:center">
   <tr>
-    <th style="width:50%">Likes</th>
-    <th style="width:50%">Dislikes</th>
+    <th style="width:50%">LIKES</th>
+    <th style="width:50%">DISLIKES</th>
   </tr>
   <tr>
     <td>Art</td>
