--- a/myjourneypg3.html
+++ b/myjourneypg3.html
@@ -137,8 +137,8 @@
    
    <table>
    <tr>
-      <th><img src="http://i67.tinypic.com/2h5thyc.jpg" width="350" height="550" ALIGN="left"></th>
-      <th><img src="http://i68.tinypic.com/5zgwsz.jpg" width="350" height="550" ALIGN="right"></th>
+      <th><img src="http://i63.tinypic.com/1zbza54.jpg" width="350" height="550" ALIGN="left"></th>
+      <th><img src="http://i67.tinypic.com/6sw0tc.jpg" width="350" height="550" ALIGN="right"></th>
    </tr>
    </table>
 	
